# CudaCProgramming

./: 2d_grid.cu  CMakeLists.txt  checkDimension.cu  checkThreadIndex.cu  defineGridBlock.cu  gpu  launch_env_cuda_ncu.sh  main.cpp  main.cu  malloc.cpp  sumArrayOnDevice.cu  sumArrayOnHost.cu  sumArraysOnGPU-small-case.cu  sumArraysOnGPUwithTime.cu  sumMatrixOnGPU-2d-grid-2d-block.cu
asm/: CMakeLists.txt  bfe.cu  bfi.cu  bfind.cu  cvt.cu  cvt_rni_sat_u8_f32.cu  data_type.cu  declval_tt.cu  mul.cu  rcp.cu  shl.cu  shr.cu  sqrt.cu  sub.cu
asm/compose/: CMakeLists.txt  rotl.cu
c01/: CMakeLists.txt  c01_device_management.cu  c01_kernel_timer_chrono.cu  c01_kernel_timer_cudaEvent.cu  c01_matrix_sum_2dgrid_2dblock.cu  c01_nvidia_smi.cpp  c01_organize_thread.cu  c01_vecAdd.cu  c01_warp_deivergence.cu  cuHelloWorld.cu  nv_query.sh  readme.md
c01/include/: pch.h
c03/: CMakeLists.txt  c01_reduce_1dim.cu  c03_reduce_1dim_unroll.cu
c04/: AoS.cu  CMakeLists.txt  SoA.cpp  bandwidth.cu  cudaHostMalloc.cu  cudaMalloc.cu  matrix_transpose.cu  mem_access_mode.cu  read_only_cache.cu  read_only_mem.cu  readme.md  static_global_mem.cu  unaligned_mem_access.cu  unaligned_mem_write.cu  unified_mem.cu
c05/: CMakeLists.txt  block_expand.cu  shuffle_instruction.cu  transpose.cu
cooperative/: CMakeLists.txt  simple_coopg.cu
cpp/: CMakeLists.txt  auto_deduce_diff_type.cpp
cuda_keter_top/: first_kernel.cu  reduce.cu
include/: cmdline.h  helper.h
intrinsics/: CMakeLists.txt  saturatef.cu  vabsss2.cu  vmins2.cu  vmins4.cu
intrinsics/double_precision/: CMakeLists.txt  __ddiv.cu  __fma_r.cu
leetcuda/: CMakeLists.txt
leetcuda/cmake/: util.cmake
leetcuda/kernels/: CMakeLists.txt
leetcuda/kernels/elementwise/: CMakeLists.txt  elementwise.cu  elementwise.py
meta/: CMakeLists.txt  drop_cast.cu
meta/include/: DropCast.h  MathOps.h  MetaProgramming.h  StaticCast.h  TypeTraits.h
ncu/: readme.txt
nvidia_cuda_api/device_api/: CMakeLists.txt  Stream.cu  __shfl_sync.cu  active_mask.cu  attr_align.cu  cuda_solver.cu  default_malloc.cu  getLaneMask.cu  shfl_down.cu  shfl_down_sync_example.cu  shfl_examples.cu  shfl_up_sync_example.cu  shfl_xor.cu  shfl_xor_sync_example.cu
quantization/: CMakeLists.txt
quantization/fp8/: CMakeLists.txt  fp8_gemm.cu
scripts/: build.sh  debug_build.sh  generate.sh
share_mem/: CMakeLists.txt  bank_conflict.cu  dynamic_shmem.cu  query_shmem.cu  share_mem.cu  shmem_config.cu  static_shmem.cu
toolchain/: weitu11.cmake
utils/: CMakeLists.txt  device_info.cu
